--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/movie?useSSL=false
-spring.datasource.username=root
+//spring.datasource.url=jdbc:mysql://192.168.178.63:3306/movie
+
+spring.datasource.url=jdbc:mysql://192.168.178.100:3306/movie?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=movie
 spring.datasource.password=movie
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
